When loading the module, if devsw_attach() fails, call dtrace_unload() to undo the effects of dtrace_load().  And if dtrace_unload() fails, panic (since we can't get the system back to its earlier stable state).

When unloading the module, call devsw_detach() first, to lock out any
new access.  Then call dtrace_unload().  If dgtrace_unload() fails,
reattach the devsw, and if that fails, panic.

Implements fixes described in PR kern/43032